# XMobGeneration Changelog

## Version 1.5.0 (2024-12-30)

### Added
- New reload command (/xmg reload) to refresh configuration and restart mob areas
- Default 100% drop chance for newly added custom drops
- Ability to edit drop chances through areas.yml
- Improved custom drops menu with cleaner lore handling

### Changed
- Custom drops now show current drop chance in GUI
- Simplified drop chance management through configuration
- Better lore handling for custom drop items

### Fixed
- Fixed ItemMeta handling in CustomDropsMenu
- Improved lore cleanup when saving items
- Better null checks for item metadata

## Version 1.4.0 (2024-12-30)

### Added
- Custom Mob Equipment System
  - New GUI interface for configuring mob equipment
  - Equipment slots for helmet, chestplate, leggings, boots, and off-hand item
  - Persistent equipment storage per spawn area
  - Visual equipment slot indicators
  - Easy equipment management through inventory clicks
  - Equipment preserved through mob respawns and server restarts
  - Zero drop chance for equipped items

### Fixed
- Equipment persistence issues:
  - Fixed equipment not being reapplied when mobs respawn
  - Fixed equipment data not being properly loaded on server restart
- Spawn count issues:
  - Fixed duplicate mob spawning on server restart
  - Improved spawn initialization timing

### Technical Changes
- Added MobEquipment model for storing equipment configurations
- Implemented CustomMobEquipmentMenu for GUI configuration
- Enhanced SpawnManager with equipment application
- Updated area configuration storage for equipment
- Added equipment button to area edit menu
- Improved server startup spawn handling
- Added proper equipment serialization/deserialization
- Added InventoryUtils for better inventory management

## Version 1.3.0 (2024-12-29)
[Previous changelog entries remain unchanged...]