@@ -8,6 +8,7 @@ import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
 import org.bukkit.event.entity.EntityDeathEvent;
 import org.bukkit.inventory.ItemStack;
+import org.bukkit.inventory.meta.ItemMeta;
 
 import java.util.List;
 import java.util.Random;
@@ -39,10 +40,28 @@ public class CustomDropsListener implements Listener {
                 for (int i = 0; i < items.size(); i++) {
                     double chance = chances.get(i);
                     if (random.nextDouble() * 100 <= chance) {
-                        event.getDrops().add(items.get(i).clone());
+                        // Clone the item and clean any chance-related lore
+                        ItemStack dropItem = cleanDropItem(items.get(i).clone());
+                        event.getDrops().add(dropItem);
                     }
                 }
             }
         }
+    }
+
+    private ItemStack cleanDropItem(ItemStack item) {
+        ItemMeta meta = item.getItemMeta();
+        if (meta != null && meta.hasLore()) {
+            List<String> lore = meta.getLore();
+            // Remove any chance-related lore lines
+            lore.removeIf(line -> 
+                line.contains("Drop Chance:") || 
+                line.contains("Edit chance")
+            );
+            // Only set lore if there are remaining lines
+            meta.setLore(lore.isEmpty() ? null : lore);
+            item.setItemMeta(meta);
+        }
+        return item;
     }
 }
