@@ -18,6 +18,7 @@ C:\Users\dolfen center\OneDrive\Desktop\dhjjh\XMobGeneration\src\main\java\com\x
 C:\Users\dolfen center\OneDrive\Desktop\dhjjh\XMobGeneration\src\main\java\com\xmobgeneration\gui\menus\MobTypeMenu.java
 C:\Users\dolfen center\OneDrive\Desktop\dhjjh\XMobGeneration\src\main\java\com\xmobgeneration\listeners\AreaSelectionListener.java
 C:\Users\dolfen center\OneDrive\Desktop\dhjjh\XMobGeneration\src\main\java\com\xmobgeneration\listeners\CustomDropsListener.java
+C:\Users\dolfen center\OneDrive\Desktop\dhjjh\XMobGeneration\src\main\java\com\xmobgeneration\listeners\CustomDropsMenuListener.java
 C:\Users\dolfen center\OneDrive\Desktop\dhjjh\XMobGeneration\src\main\java\com\xmobgeneration\listeners\GUIListener.java
 C:\Users\dolfen center\OneDrive\Desktop\dhjjh\XMobGeneration\src\main\java\com\xmobgeneration\listeners\MobContainmentListener.java
 C:\Users\dolfen center\OneDrive\Desktop\dhjjh\XMobGeneration\src\main\java\com\xmobgeneration\listeners\MobDamageListener.java
